wrapping of title of broken-duplicates window fixed
git-svn-id: https://xp-dev.com/svn/crackOS/branches/production@614 2def0f6a-7ed5-4680-9172-106844e829bd

--- a/server/static/css/login_forms.css
+++ b/server/static/css/login_forms.css
@@ -24,22 +24,6 @@ input.formButton
   color: #7F7F7F;
 }
 
-.modalwin>.title
-{
-  position: absolute;
-  left: 2px;
-  right: 2px;
-  top: 2px;
-  border: 2px solid #CCC;
-  border-radius: 12px;
-  height: 22px;
-  padding-right: 22px;
-  text-align: center;
-  font-size: 16px;
-  color: gray;
- /* background: #CCC;*/
-}
-
 .modalwin .content
 {
   margin-top: 10px;
