--- a/server/static/css/upload.css
+++ b/server/static/css/upload.css
@@ -98,6 +98,32 @@
   position: absolute;
 }
 
+.modalwin.broken-duplicate
+{
+  min-width: 350px;
+}
+
+.title.broken-duplicate
+{
+  position: absolute;
+  left: 2px;
+  right: 2px;
+  top: 2px;
+  border: 2px solid #CCC;
+  border-radius: 12px;
+  height: 22px;
+  padding-right: 22px;
+  text-align: center;
+  font-size: 16px;
+  color: gray;
+  white-space: nowrap;
+ /* background: #CCC;*/
+}
+
+.content.broken-duplicate
+{
+}
+
 li.broken-duplicate
 {
   list-style-type: none;
